--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <header>
     <div class="logo-div"><img src="images/logo.png" alt="hospital logo"></div>
     <div class="header-contents">
-      <a href="#home">Home</a>
-      <a href="#about us">About Us</a>
-      <a href="#our-servies">Our Serives</a>
-      <a href="#contacts">Contact Us</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="contacts.html">Contact Us</a>
     </div>
   </header>
 
@@ -26,7 +25,7 @@
         <h2>We are Wema Hopsital.</h2>
         <h4>Compassionate Care, Advanced Medicine.</h4>
         <p>We provide compassionate care and advanced medical solutions to help you and your family live healthier lives. <br> Our team of experts is here for you every step of the way.</p>
-        <button>Book an Appointment.</button>
+        <a href="contacts.html">Book an Appointment.</a>
       </div>
     </section>
     <!--About Us Section-->
@@ -51,22 +50,22 @@
          <div class="service-card">
           <img src="images/kidneys.jpeg" alt="kidneys">
           <p>Nephrologist</p>
-          <button>More details</button>
+          <a href="about.html">More details</a>
          </div>
          <div class="service-card">
           <img src="images/lungs.jpeg" alt="lungs">
           <p>Pulmonologist</p>
-          <button>More details</button>
+          <a href="about.html">More details</a>
          </div>         
          <div class="service-card">
           <img src="images/heart.jpeg" alt="heart">
           <p>Cardiologist</p>
-          <button>More details</button>
+          <a href="about.html">More details</a>
          </div>         
          <div class="service-card">
           <img src="images//dentist.jpeg" alt="dentist">
           <p>Dentist</p>
-          <button>More details</button>
+          <a href="about.html">More details</a>
          </div>     
       </div>
     </section>
