--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <div class="logo-div"><img src="images/logo.png" alt="hospital logo"></div>
+    <button class="menu-toggle" id="menu-toggle">☰</button>
     <div class="header-contents">
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
