--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!--Header-->
   <header>
     <div class="logo-div"><img src="images/logo.png" alt="hospital logo"></div>
+    <button class="menu-toggle" id="menu-toggle">☰</button>
     <div class="header-contents">
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
